--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
 title: Support Center Kampoeng
 email: support@kampoengnetworks.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > # Support Center Kampoeng.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://support.kampoeng.co.id" # the base hostname & protocol for your site
 twitter_username: kampoengid
